MD_complex_li_antibody_static_sel_add_meta/complex_new_antibody_109L_GLU_f_run/nohup.out
  File "locate_pep.py", line 17
    print container[-1].replace(" ","")
          ^
SyntaxError: invalid syntax
-3244-
gromac_meta.bash: line 22: gmx: command not found
